--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-exit-app": "^2.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
